--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "antd": "^5.0.4",
     "axios": "^1.2.1",
     "formik": "^2.2.9",
+    "framer-motion": "^7.6.19",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.5",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
