--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@fortawesome/fontawesome-free": "^6.2.1",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,11 +18,13 @@
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
     "framer-motion": "^7.6.19",
+    "history": "^5.3.0",
     "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^5.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-jwt": "^1.1.7",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
@@ -24,6 +32,8 @@
     "reactstrap": "^9.1.5",
     "redux": "^4.2.0",
     "remixicon": "^2.5.0",
+    "sass": "^1.56.2",
+    "sass-loader": "^13.2.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
