--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "history": "^5.3.0",
     "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^5.0.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
