--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
-    "react-facebook-login": "^4.1.1",
     "react-jwt": "^1.1.7",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
@@ -37,6 +36,7 @@
     "remixicon": "^2.5.0",
     "sass": "^1.56.2",
     "sass-loader": "^13.2.0",
+    "swiper": "^8.4.5",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
