--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-facebook-login": "^4.1.1",
     "react-jwt": "^1.1.7",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
